# projeto-satc-datalake

./: .gitignore  pyproject.toml  requirements.txt
